--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mein Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="https://github.com/AlaaDiab7/Bewerbungsunterlagen/blob/main/favicon.ico">
 </head>
 <body>
     <div class="container">
