--- a/index.html
+++ b/index.html
@@ -69,6 +69,42 @@
     const canvas = document.getElementById("pdf-canvas");
     const ctx = canvas.getContext("2d");
 let originalPdfData = null; // To store the original buffer
+
+    let isDragging = false;
+    let offsetX, offsetY;
+
+    // Function to start dragging
+    function startDrag(event) {
+        isDragging = true;
+        offsetX = event.clientX - canvas.offsetLeft;
+        offsetY = event.clientY - canvas.offsetTop;
+        canvas.style.cursor = 'grabbing';  // Change cursor to grabbing when dragging starts
+    }
+
+    // Function to drag the canvas
+    function drag(event) {
+        if (isDragging) {
+            let x = event.clientX - offsetX;
+            let y = event.clientY - offsetY;
+            canvas.style.left = `${x}px`;
+            canvas.style.top = `${y}px`;
+        }
+    }
+
+    // Function to stop dragging
+    function stopDrag() {
+        isDragging = false;
+        canvas.style.cursor = 'move';  // Change cursor back to move when dragging stops
+    }
+
+    // Add event listeners to handle dragging
+    const canvas = document.getElementById('pdf-canvas');
+
+    canvas.addEventListener('mousedown', startDrag);
+    document.addEventListener('mousemove', drag);
+    document.addEventListener('mouseup', stopDrag);
+    
+    
 async function loadPDF(url) {
     try {
         console.log("Fetching PDF from URL:", url);
