--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <section id="recommendations">
                     <h2>Empfehlungen</h2>
                     <ul id="recommendation-list">
-                        <li><a href="#" onmouseover="previewCertificate('rec1.pdf')">Empfehlungsschreiben 1</a></li>
-                        <li><a href="#" onmouseover="previewCertificate('rec2.pdf')">Empfehlungsschreiben 2</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Empfehlungen.pdf')">Empfehlungsschreiben 1</a></li>
                     </ul>
                 </section>
 
@@ -39,6 +38,15 @@
                         <li><a href="#" onmouseover="previewCertificate('pub2.pdf')">Publikation 2</a></li>
                     </ul>
                 </section>
+
+                 <section id="Lebenslauf">
+                    <h2>Lebenslauf</h2>
+                    <ul id="Lebenslauf-list">
+                        <li><a href="#" onmouseover="previewCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Lebenslauf_Alaa_Diab.pdf')">Aktuelles Lebenlauf</a></li>
+                    </ul>
+                </section>
+
+                
 
             </main>
         </div>
