--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                 <section id="recommendations">
                     <h2>Empfehlungen</h2>
                     <ul id="recommendation-list">
-                        <li><a href="#" onmouseover="previewCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Empfehlungen.pdf')">Empfehlungsschreiben 1</a></li>
+                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Empfehlungen.pdf')">Empfehlungsschreiben 1</a></li>
                     </ul>
                 </section>
 
                 <section id="publications">
                     <h2>Publikationen und Forschungen</h2>
                     <ul id="publication-list">
-                        <li><a href="#" onmouseover="previewCertificate('pub1.pdf')">Publikation 1</a></li>
-                        <li><a href="#" onmouseover="previewCertificate('pub2.pdf')">Publikation 2</a></li>
+                        <li><a href="#" onclick="selectCertificate('pub1.pdf')">Publikation 1</a></li>
+                        <li><a href="#" onclick="selectCertificate('pub2.pdf')">Publikation 2</a></li>
                     </ul>
                 </section>
 
                  <section id="Lebenslauf">
                     <h2>Lebenslauf</h2>
                     <ul id="Lebenslauf-list">
-                        <li><a href="#" onmouseover="previewCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Lebenslauf_Alaa_Diab.pdf')">Aktuelles Lebenlauf</a></li>
+                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Lebenslauf_Alaa_Diab.pdf')">Aktuelles Lebenlauf</a></li>
                     </ul>
                 </section>
 
