--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alaa Diab Portfolio</title>
+    <title>Alaa Diab Karriere-Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -12,8 +12,8 @@
         <!-- Left-side: Certificate List -->
         <div class="content">
             <header>
-                <h1>Willkommen in meinem Portfolio</h1>
-                <p>Hier finden Sie meine Zertifikate und weitere Bewerbungsunterlagen.</p>
+                <h1>Willkommen auf meinem Karriere-Portfolio</h1>
+                <p>Hier finden Sie meine Zertifikate, Empfehlungsschreiben und weitere Unterlagen, die meine beruflichen Qualifikationen und Erfahrungen präsentieren.</p>
             </header>
             <main>
                 <section id="certificates">
