--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
                     </ul>
                 </section>
 
-                
+                <section id="Galerie">
+                    <h2>Simulationsgalerie</h2>
+                    <ul id="Simulationsgalerie">
+                        <li><a href="https://alaadiab7.github.io/Bewerbungsunterlagen/Simulation_Galerie/indes.html"> Simulationsgalerie </a></li>
+                    </ul>
+                </section>
 
             </main>
         </div>
