--- a/Simulation_Galerie/index.html
+++ b/Simulation_Galerie/index.html
@@ -11,34 +11,43 @@
         <h1>Simulationsmodelle Galerie</h1>
     </header>
     <main>
+	<h1> NX Siemens Modelle </h1>
         <section class="gallery">
             <div class="gallery-item">
                 <img src="images/table.jpg" alt="table">
-				<div class="overlay">table</div>
+		<div class="overlay">table</div>
             </div>
             <div class="gallery-item">
                 <img src="images/table_support.jpg" alt="table support">
-				<div class="overlay">table support</div>
+		<div class="overlay">table support</div>
             </div>
-            <!-- Weitere Modelle -->
-			<div class="gallery-item">
+	    <div class="gallery-item">
                 <img src="images/drill_press_washer.jpg" alt="drill press washer">
-				<div class="overlay">drill press washer</div>
+		<div class="overlay">drill press washer</div>
             </div>
-			<div class="gallery-item">
+	    <div class="gallery-item">
                 <img src="images/column_support.jpg" alt="column support">
-				<div class="overlay">column support</div>
+		<div class="overlay">column support</div>
             </div>
-			<div class="gallery-item">
+	    <div class="gallery-item">
                 <img src="images/column.jpg" alt="column">
-				<div class="overlay">column</div>
+	    	<div class="overlay">column</div>
             </div>
-			<div class="gallery-item">
+	    <div class="gallery-item">
                 <img src="images/drill_press_table.jpg" alt="drill press table">
-				<div class="overlay">drill press table</div>
+	    	<div class="overlay">drill press table</div>
             </div>
-			
+	    <!-- Weitere Modelle - To be added ... -->
+		
         </section>
+
+    	<h1> AutoCAD Modelle </h1>
+        <section class="gallery">
+	    <div class="gallery-item">
+                <img src="images/table.jpg" alt="table">
+		<div class="overlay">table</div>
+            </div>
+	</section>
     </main>
     <footer>
         <p>&copy; 2025 Alaa Diab Simulation Galerie</p>
