--- a/Simulation_Galerie/details.html
+++ b/Simulation_Galerie/details.html
@@ -14,6 +14,10 @@
         <section class="details">
             <h2 id="model-name"></h2>
             <p id="model-description"></p>
+            <div class="navigation-buttons">
+                <a href="index.html" class="btn">Zurück zur Galerie</a>
+                <a href="../index.html" class="btn">Zurück zum Portfolio</a>
+            </div>
         </section>
     </main>
     <footer>
