--- a/Simulation_Galerie/index.html
+++ b/Simulation_Galerie/index.html
@@ -64,7 +64,9 @@
 	</section>
 
 
-		
+	<div class="navigation-buttons">
+            <a href="../index.html" class="btn">Zurück zum Portfolio</a>
+        </div>	
     </main>
     <footer>
         <p>&copy; 2025 Alaa Diab Simulation Galerie</p>
