--- a/Simulation_Galerie/index.html
+++ b/Simulation_Galerie/index.html
@@ -57,11 +57,25 @@
 		<p> </p>
 		<section class="gallery">
 		    <div class="gallery-item">
-	            <img src="images/table.jpg" alt="table">
-				<div class="overlay">table</div>
+	            <img src="images/Taipei 101_Alaa Diab.jpg" alt="Taipei 101">
+				<div class="overlay">Taipei 101</div>
 	        </div>
-		
-	</section>
+
+			<div class="gallery-item">
+	            <img src="images/Tee Pipe_Alaa Diab.jpg" alt="Tee Pipe">
+				<div class="overlay">Tee Pipe</div>
+	        </div>
+
+			<div class="gallery-item">
+	            <img src="images/Tee Pipe_Alaa Diab_2.jpg" alt="Tee Pipe (Back)">
+				<div class="overlay">Tee Pipe (Back)</div>
+	        </div>
+
+			<div class="gallery-item">
+	            <img src="images/305_Develop_House_Model.jpg" alt="House_Model">
+				<div class="overlay">House_Model</div>
+	        </div>
+		</section>
 
 
 	<div class="navigation-buttons">
