--- a/Simulation_Galerie/index.html
+++ b/Simulation_Galerie/index.html
@@ -75,6 +75,18 @@
 	            <img src="images/305_Develop_House_Model.jpg" alt="House_Model">
 				<div class="overlay">House_Model</div>
 	        </div>
+			
+			<div class="gallery-item">
+	            <img src="images/Tisch_MW.jpg" alt="Wood Table">
+				<div class="overlay">Wood Table</div>
+	        </div>
+
+			<div class="gallery-item">
+	            <img src="images/zweiTische_MW_all.jpg" alt="Two Wood Tables">
+				<div class="overlay">Two Wood Tables</div>
+	        </div>
+
+			
 		</section>
 
 
