--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="content">
             <header>
                 <h1>Willkommen auf meinem Karriere-Portfolio</h1>
-                <p>Hier finden Sie meine Zertifikate, Empfehlungsschreiben und weitere Unterlagen, die meine beruflichen Qualifikationen und Erfahrungen präsentieren.</p>
+                <p>Hier finden Sie meinen Lebenslauf, meine Zertifikate, Empfehlungsschreiben und weitere Unterlagen, die meine beruflichen Qualifikationen und Erfahrungen präsentieren.</p>
             </header>
             <main>
                 <section id="Lebenslauf">
