--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <ul id="certificate-list">
                         <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
                         <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Programming_certificates.pdf')">Programmier-Zertifikate</a></li>
-                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/AutoCAD 2D_3D.pdf')">Simulation Zertifikate</a></li>
+                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/CAD_Certificate.pdf')">Simulation Zertifikate</a></li>
                     </ul>
                 </section>
 
