--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                 <section id="publications">
                     <h2>Publikationen und Forschungen</h2>
                     <ul id="publication-list">
-                        <li><a href="#" onclick="selectCertificate('pub1.pdf')">Publikation 1</a></li>
-                        <li><a href="#" onclick="selectCertificate('pub2.pdf')">Publikation 2</a></li>
+                        <li><a href="#" onclick="selectCertificate('pub1.pdf')">Enhancing Damage Detection in 2D Concrete Plates: A Comprehensive Study on Interpolation Methods and Parameters</a></li>
+                        <li><a href="#" onclick="selectCertificate('pub2.pdf')">Damage Index Implementation for Structural Health Monitoring</a></li>
+                        <li><a href="#" onclick="selectCertificate('pub3.pdf')">Numerical Investigation of the Time-of-Flight and Wave Energy Dependent Hybrid Method for Structural Damage Detection</a></li>
                     </ul>
                 </section>
 
