--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <section id="publications">
                     <h2>Publikationen und Forschungen</h2>
                     <ul id="publication-list">
-                        <li><a href="#" onclick="selectCertificate('pub1.pdf')">Enhancing Damage Detection in 2D Concrete Plates: A Comprehensive Study on Interpolation Methods and Parameters</a></li>
-                        <li><a href="#" onclick="selectCertificate('pub2.pdf')">Damage Index Implementation for Structural Health Monitoring</a></li>
-                        <li><a href="#" onclick="selectCertificate('pub3.pdf')">Numerical Investigation of the Time-of-Flight and Wave Energy Dependent Hybrid Method for Structural Damage Detection</a></li>
+                        <li><a href="https://www.mdpi.com/2076-0825/13/4/128" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/actuators-13-00128-v2.pdf')">Enhancing Damage Detection in 2D Concrete Plates: A Comprehensive Study on Interpolation Methods and Parameters</a></li>
+                        <li><a href="https://link.springer.com/chapter/10.1007/978-3-031-15758-5_80" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Damage Index Implementation for Structural Health Monitoring.pdf')">Damage Index Implementation for Structural Health Monitoring</a></li>
+                        <li><a href="https://link.springer.com/article/10.1007/s42417-023-01025-0" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/s42417-023-01025-0.pdf')">Numerical Investigation of the Time-of-Flight and Wave Energy Dependent Hybrid Method for Structural Damage Detection</a></li>
                     </ul>
                 </section>
 
