--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <ul id="recommendation-list">
                         <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Empfehlungen.pdf')">Empfehlungsschreiben 1</a></li>
                     </ul>
+                    <ul id="recommendation-list">
+                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Arbeitszeugnis.pdf')">Arbeitszeugnis</a></li>
+                    </ul>
                 </section>
 
                 <section id="Galerie">
