--- a/Simulation_Galerie/index.html
+++ b/Simulation_Galerie/index.html
@@ -47,8 +47,13 @@
 		<p> </p>
         <section class="gallery">
 		    <div class="gallery-item">
-				<img src="images/table.jpg" alt="table">
-				<div class="overlay">table</div>
+				<img src="images/HausModel1.png" alt="HausModel1">
+				<div class="overlay">HausModel1</div>
+			</div>
+
+			<div class="gallery-item">
+				<img src="images/HausModel2.png" alt="HausModel2">
+				<div class="overlay">HausModel2</div>
 			</div>
 			
 		</section>
