Add meta description to index.html
Added a meta description for SEO optimization.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" 
+      content="Portfolio of Alaa Diab – showcasing projects, Simulation work, coding, and application designs. Explore my experience, skills, and creative work.">
     <title>Alaa Diab Karriere-Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
