--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" 
       content="Portfolio of Alaa Diab – showcasing projects, Simulation work, coding, and application designs. Explore my experience, skills, and creative work.">
+
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
+<meta property="og:title" content="Alaa Diab – Portfolio">
+<meta property="og:description" content="Explore BIM, Structural engineering, 3D visualization, automation, and coding projects by Alaa Diab.">
+<meta property="og:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.jpg"> <!-- Replace with your actual image -->
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
+<meta name="twitter:title" content="Alaa Diab – Portfolio">
+<meta name="twitter:description" content="Professional portfolio showcasing BIM, Structural Engineering, 3D design, and technical projects.">
+<meta name="twitter:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.jpg"> <!-- Replace with your actual image -->
+
+<!-- Canonical Link -->
+<link rel="canonical" href="https://alaadiab7.github.io/Bewerbungsunterlagen/">
+
+
+    
     <title>Alaa Diab Karriere-Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
