--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <meta property="og:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
 <meta property="og:title" content="Alaa Diab – Portfolio">
 <meta property="og:description" content="Explore BIM, Structural engineering, 3D visualization, automation, and coding projects by Alaa Diab.">
-<meta property="og:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.jpg"> <!-- Replace with your actual image -->
+<meta property="og:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png"> <!-- Replace with your actual image -->
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
 <meta name="twitter:title" content="Alaa Diab – Portfolio">
 <meta name="twitter:description" content="Professional portfolio showcasing BIM, Structural Engineering, 3D design, and technical projects.">
-<meta name="twitter:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.jpg"> <!-- Replace with your actual image -->
+<meta name="twitter:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png"> <!-- Replace with your actual image -->
 
 <!-- Canonical Link -->
 <link rel="canonical" href="https://alaadiab7.github.io/Bewerbungsunterlagen/">
