--- a/index.html
+++ b/index.html
@@ -3,35 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" 
-      content="Portfolio of Alaa Diab – showcasing projects, Simulation work, coding, and application designs. Explore my experience, skills, and creative work.">
 
+    <title>Alaa Diab – Karriere-Portfolio</title>
 
-    <!-- Open Graph / Facebook / LinkedIn -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
-<meta property="og:title" content="Alaa Diab – Portfolio">
-<meta property="og:description" content="Explore BIM, Structural engineering, 3D visualization, automation, and coding projects by Alaa Diab.">
-<meta property="og:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png"> <!-- Replace with your actual image -->
+    <!-- Primary Meta -->
+    <meta name="title" content="Alaa Diab – Karriere-Portfolio">
+    <meta name="description" content="Portfolio of Alaa Diab showcasing simulation projects, programming certificates, academic research, structural engineering work, and professional qualifications.">
 
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
-<meta name="twitter:title" content="Alaa Diab – Portfolio">
-<meta name="twitter:description" content="Professional portfolio showcasing BIM, Structural Engineering, 3D design, and technical projects.">
-<meta name="twitter:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png"> <!-- Replace with your actual image -->
+    <!-- Canonical -->
+    <link rel="canonical" href="https://alaadiab7.github.io/Bewerbungsunterlagen/">
 
-<!-- Canonical Link -->
-<link rel="canonical" href="https://alaadiab7.github.io/Bewerbungsunterlagen/">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
+    <meta property="og:title" content="Alaa Diab – Karriere-Portfolio">
+    <meta property="og:description" content="Explore BIM, structural engineering, simulation, coding, and research projects by Alaa Diab.">
+    <meta property="og:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png">
 
-    
-    <title>Alaa Diab Karriere-Portfolio</title>
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://alaadiab7.github.io/Bewerbungsunterlagen/">
+    <meta name="twitter:title" content="Alaa Diab – Karriere-Portfolio">
+    <meta name="twitter:description" content="Professional portfolio showcasing structural engineering, BIM modeling, research, and simulation.">
+    <meta name="twitter:image" content="https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png">
+
+    <!-- Schema.org JSON-LD (Google Rich Search Result) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Person",
+      "name": "Alaa Diab",
+      "url": "https://alaadiab7.github.io/Bewerbungsunterlagen/",
+      "image": "https://alaadiab7.github.io/Bewerbungsunterlagen/preview.png",
+      "jobTitle": "Structural Engineer / Simulation Specialist",
+      "description": "Portfolio of Alaa Diab showcasing simulation, engineering, programming certificates, and professional qualifications.",
+      "sameAs": []
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="container">
         <!-- Left-side: Certificate List -->
