--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     <ul id="certificate-list">
                         <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
                         <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Programming_certificates.pdf')">Programmier-Zertifikate</a></li>
-                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/CAD_Certificate.pdf')">Simulation Zertifikate</a></li>
+                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/CAD_Certificate.pdf')">CAD Zertifikate</a></li>
+                        <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/BIM Spezialist_Zertifikat.pdf')">BIM Zertifikate</a></li>
                     </ul>
                 </section>
 
